syntax = "proto3";

package buf.validate;

import "google/protobuf/descriptor.proto";

// This file is a stripped down version of
// https://buf.build/bufbuild/protovalidate/file/main:buf/validate/validate.proto
// for testing.

extend google.protobuf.MessageOptions {
  optional MessageRules message = 1159;
}

message MessageRules {
  repeated string cel_expression = 5;
  repeated Rule cel = 3;
}

extend google.protobuf.FieldOptions {
  FieldRules field = 1159;
}

message FieldRules {
  repeated string cel_expression = 29;
  repeated Rule cel = 23;
  oneof type {
    RepeatedRules repeated = 18;
    MapRules map = 19;
  }
}

message RepeatedRules {
  FieldRules items = 4;
}

message MapRules {
  FieldRules keys = 4;
  FieldRules values = 5;
}

message Rule {
  string id = 1;
  string message = 2;
  string expression = 3;
}
